--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                </div>
                <div class="mobile-menu d-lg-none"></div>
                <div class="header-button">
-                  <a href="#" class="btn tj-btn-primary">Hire me!</a>
+                  <a href="contact.html" class="btn tj-btn-primary">Hire me!</a>
                </div>
                <div class="menu-bar d-lg-none">
                   <button>
@@ -147,7 +147,7 @@
                </div>
                <div class="mobile-menu d-lg-none"></div>
                <div class="header-button">
-                  <a href="#" class="btn tj-btn-primary">Hire me!</a>
+                  <a href="contact.html" class="btn tj-btn-primary">Hire me!</a>
                </div>
                <div class="menu-bar d-lg-none">
                   <button>
@@ -870,7 +870,7 @@
                   <div class="contact-form-box wow fadeInLeft" data-wow-delay=".3s">
                      <div class="section-header">
                         <h2 class="section-title">Let’s work together!</h2>
-                        <p>I design and code beautifully simple things and i love what i do. Just simple like that!</p>
+                        <p>Fill out the form, and I'll get back to you soon! 🚀</p>
                      </div>
 
                      <div class="tj-contact-form">
