Visitor Count Modification

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                   <div class="col-4 col-lg-4">
                      <div class="funfact-item d-flex flex-column flex-sm-row flex-wrap align-items-center">
                         <div class="number"><span class="odometer" id="visitor-count" data-count="0">0</span>+</div>
-                        <div class="text">Website <br />Views</div>
+                        <div class="text">Unique <br /> Visitors </div>
                      </div>
                   </div>
                   
