--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Sachin T S - Cloud Engineer & Web Developer</title>
  
-   <meta name="description" content="I'm Sachin T S, a Cloud Engineer and Web Developer passionate about designing and implementing scalable cloud solutions for global reach.">
+   <meta name="description" content="I'm Sachin T S, a Cloud Engineer and Flutter Developer passionate about designing and implementing scalable cloud solutions for global reach.">
    <meta name="keywords" content="cloud engineer, web developer,  GCP, cloud solutions, infrastructure, security, scalability">
  
-   <meta property="og:title" content="Sachin T S - Cloud Engineer & Web Developer">
+   <meta property="og:title" content="Sachin T S - Cloud Engineer & Flutter Developer">
    <meta property="og:description" content="I design and implement scalable cloud solutions to solve complex infrastructure challenges, ensuring reliability and security while connecting billions of users worldwide.">
-   <meta property="og:image" content="https://sachints.dev/assets/img/portfoliopic.jpg"> 
+   <meta property="og:image" content="https://sachints.dev/assets/img/portfolioimg.png"> 
    <meta property="og:url" content="https://sachints.dev/">
    <meta property="og:type" content="website">
  
    <meta name="twitter:card" content="summary_large_image"> 
-   <meta name="twitter:title" content="Sachin T S - Cloud Engineer & Web Developer">
+   <meta name="twitter:title" content="Sachin T S - Cloud Engineer & Flutter Developer">
    <meta name="twitter:description" content="I design and implement scalable cloud solutions to solve complex infrastructure challenges, ensuring reliability and security while connecting billions of users worldwide.">
-   <meta name="twitter:image" content="https://sachints.dev/assets/img/portfoliopic.jpg">
+   <meta name="twitter:image" content="https://sachints.dev/assets/img/portfolioimg.png">
 
    <!-- Place favicon.ico in the root directory -->
    <link rel="apple-touch-icon" href="./assets/img/favicon.png" />
